# rust-docstrings

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.html  search-index.js
docstrings/: DocBlock.t.html  DocSection.t.html  Documentation.t.html  enum.DocSection.html  enum.ParseError.html  fn.parse_md_docblock.html  fn.parse_md_docblock_events.html  index.html  parse_md_docblock.v.html  parse_md_docblock_events.v.html  sidebar-items.js  struct.DocBlock.html  type.Documentation.html  type.Identifier.html  type.Pattern.html  type.SectionHeadline.html
docstrings/errors/: enum.ParseError.html
docstrings/types/: Pattern.t.html  SectionHeadline.t.html  enum.DocSection.html  struct.DocBlock.html  type.Documentation.html  type.Identifier.html  type.Pattern.html  type.SectionHeadline.html
examples/: md_events.rs  this_is_my_repl.rs
getopts/: enum.Fail.html  enum.FailType.html  enum.HasArg.html  enum.Occur.html  enum.ParsingStyle.html  index.html  struct.Matches.html  struct.Options.html
pulldown_cmark/: constant.OPTION_ENABLE_FOOTNOTES.html  constant.OPTION_ENABLE_TABLES.html  enum.Event.html  enum.Tag.html  index.html  struct.Options.html  struct.Parser.html
pulldown_cmark/html/: fn.push_html.html  index.html
quick_error/: index.html  macro.quick_error.html  struct.Context.html  trait.ResultExt.html
src/: errors.rs  extractors.rs  lib.rs  offset_parser.rs  to_md.rs  types.rs
src/docstrings/: errors.rs.html  extractors.rs.html  lib.rs.html  to_md.rs.html  types.rs.html
src/pulldown_cmark/: entities.rs.html  (+8 more)
tests/: something_bad.rs  something_good.rs
(+23 files in other folders)
