[package]
name = "docstrings"
version = "0.1.0"
authors = [
    "Pascal Hertleif <killercup@gmail.com>",
    "Martin Carton <cartonmartin@gmail.com>",
]
license = "MIT/Apache-2.0"
description = "Extract data from Markdown as used in Rust documentation strings"
documentation = "https://docs.rs/docstrings"
repository = "https://github.com/killercup/rust-docstrings"
readme = "README.md"
keywords = ["markdown", "documentation"]
categories = ["development-tools", "parsing"]

[badges]
travis-ci = { repository = "killercup/rust-docstrings", branch = "master" }

[dependencies]
# Optional because rustc ships it and one might want to use that one.
pulldown-cmark = { version = "0.0.14", optional = true }
quick-error = "1.1.0"

[features]
default = ["pulldown-cmark"]
